--- a/backend/package.json
+++ b/backend/package.json
@@ -12,10 +12,10 @@
   "license": "ISC",
   "dependencies": {
     "axios": "^0.21.4",
+    "bcrypt": "^5.0.1",
     "body-parser": "^1.19.0",
     "cors": "^2.8.5",
     "crypto-js": "^4.1.1",
-    "cryptojs": "^2.5.3",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
