--- a/client/package.json
+++ b/client/package.json
@@ -17,6 +17,7 @@
     "react-scripts": "4.0.3",
     "react-thunk": "^1.0.0",
     "redux": "^4.1.1",
+    "sweetalert-react": "^0.4.11",
     "thunk": "^0.0.1",
     "web-vitals": "^1.0.1"
   },
