--- a/backend/.env
+++ b/backend/.env
@@ -1,3 +1,3 @@
-MongoURI="mongodb://localhost/test-maker"
+MongoURI='mongodb+srv://sammysoft:sammysoft@sammy-fyvl0.gcp.mongodb.net/MyDB?retryWrites=true&w=majority'
 CRYPT_PASS="calibrain"
 TOKEN_KEY= "calibrain"
